Add a new context menu with an option Delete. Click on the option removes a snippet.

--- a/src/main/webapp/index.zul
+++ b/src/main/webapp/index.zul
@@ -124,6 +124,7 @@
 
     <menupopup id="contextMenuSnippets">
         <menuitem label="Add Snippet" onClick="controller.addSnippet()" />
+        <menuitem label="Delete Snippet" onClick="controller.deleteSnippet()" />
     </menupopup>
 
     <menupopup id="contextMenuLabels">
